--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @layer reset, tokens, general.common, general.breakpoints, specific, theme.light, theme.dark, states;
 
 @import url("./styles/reset.css") layer(reset);
-@import url("./styles/font.css");
+@import url("./styles/fonts.css");
 @import url("./styles/tokens.css") layer(tokens);
 @import url("./styles/wcag-reset.css") layer(tokens);
 @import url("./styles/common.css") layer(general.common);
